; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/board/extr_board.c_find_by_address.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/board/extr_board.c_find_by_address.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device_node = type { i32 }
%struct.resource = type { i64 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i64)* @find_by_address to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @find_by_address(i64 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i64, align 8
  %4 = alloca %struct.device_node*, align 8
  %5 = alloca %struct.resource, align 8
  store i64 %0, i64* %3, align 8
  %6 = call %struct.device_node* @of_find_all_nodes(%struct.device_node* null)
  store %struct.device_node* %6, %struct.device_node** %4, align 8
  br label %7

7:                                                ; preds = %23, %1
  %8 = load %struct.device_node*, %struct.device_node** %4, align 8
  %9 = icmp ne %struct.device_node* %8, null
  br i1 %9, label %10, label %26

10:                                               ; preds = %7
  %11 = load %struct.device_node*, %struct.device_node** %4, align 8
  %12 = call i32 @of_address_to_resource(%struct.device_node* %11, i32 0, %struct.resource* %5)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %23, label %14

14:                                               ; preds = %10
  %15 = getelementptr inbounds %struct.resource, %struct.resource* %5, i32 0, i32 0
  %16 = load i64, i64* %15, align 8
  %17 = load i64, i64* %3, align 8
  %18 = icmp eq i64 %16, %17
  br i1 %18, label %19, label %22

19:                                               ; preds = %14
  %20 = load %struct.device_node*, %struct.device_node** %4, align 8
  %21 = call i32 @of_node_put(%struct.device_node* %20)
  store i32 1, i32* %2, align 4
  br label %27

22:                                               ; preds = %14
  br label %23

23:                                               ; preds = %22, %10
  %24 = load %struct.device_node*, %struct.device_node** %4, align 8
  %25 = call %struct.device_node* @of_find_all_nodes(%struct.device_node* %24)
  store %struct.device_node* %25, %struct.device_node** %4, align 8
  br label %7

26:                                               ; preds = %7
  store i32 0, i32* %2, align 4
  br label %27

27:                                               ; preds = %26, %19
  %28 = load i32, i32* %2, align 4
  ret i32 %28
}

declare dso_local %struct.device_node* @of_find_all_nodes(%struct.device_node*) #1

declare dso_local i32 @of_address_to_resource(%struct.device_node*, i32, %struct.resource*) #1

declare dso_local i32 @of_node_put(%struct.device_node*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
